--- a/node/package.json
+++ b/node/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "netlify dev",
-    "build": "netlify build",
-    "deploy": "netlify deploy --prod"
+    "dev": "node app.js"
   },
   "dependencies": {
     "axios": "^1.12.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "lodash": "^4.17.21",
     "lowdb": "^7.0.1"
   }
