--- a/node/package.json
+++ b/node/package.json
@@ -1,9 +1,8 @@
 {
   "name": "io-api",
-  "version": "1.0.0",
-  "license": "MIT",
+  "type": "module",
   "scripts": {
-    "dev": "node app.js"
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "axios": "^1.12.1",
